<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fguide2.pdv69.fguide2.InfoActivity"
    android:background="#fffffded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label"
        android:id="@+id/textView"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/txtArea"
        android:visibility="invisible"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selIlar"
        android:id="@+id/textView4"
        android:textSize="25dp"
        android:layout_below="@+id/txtArea"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Location"
        android:id="@+id/textView15"
        android:paddingRight="25dp"
        android:paddingLeft="0dp"
        android:paddingBottom="20dp"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LocIlar"
        android:paddingRight="25dp"
        android:paddingLeft="0dp"
        android:paddingBottom="20dp"
        android:id="@+id/textView16"
        android:layout_toEndOf="@+id/textView15"
        android:layout_above="@+id/textView18"
        android:layout_alignStart="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Range"
        android:paddingRight="25dp"
        android:paddingLeft="0dp"
        android:paddingBottom="20dp"
        android:id="@+id/textView17"
        android:layout_alignTop="@+id/textView18"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RangeIlar"
        android:id="@+id/textView18"
        android:paddingRight="25dp"
        android:paddingLeft="0dp"
        android:paddingBottom="20dp"
        android:layout_toEndOf="@+id/textView19"
        android:layout_above="@+id/textView19"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Notable"
        android:paddingRight="25dp"
        android:paddingLeft="0dp"
        android:paddingBottom="20dp"
        android:id="@+id/textView19"
        android:layout_alignTop="@+id/textView20"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NotableIlar"
        android:paddingRight="25dp"
        android:paddingLeft="0dp"
        android:paddingBottom="20dp"
        android:id="@+id/textView20"
        android:layout_toEndOf="@+id/textView19"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView4"
        android:background="@drawable/ilar"
        android:layout_above="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView16" />
</RelativeLayout>
