<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartActivity"
    android:background="#fffffded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label"
        android:id="@+id/lblHead"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome"
        android:id="@+id/lblWelcome"
        android:textSize="25dp"
        android:layout_below="@+id/lblHead"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:id="@+id/rgGroup"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblWelcome">

        <RadioButton
            android:paddingTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDap"
            android:id="@+id/rbDapitan"
            android:checked="false"
            android:textSize="36sp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="25dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbEsp"
            android:id="@+id/rbEspanya"
            android:checked="false"
            android:textSize="36sp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="25dp"
            android:paddingTop="15dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbLac"
            android:id="@+id/rbLacson"
            android:checked="false"
            android:textSize="36sp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="25dp"
            android:paddingTop="15dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPNo"
            android:id="@+id/rbPNoval"
            android:checked="false"
            android:textSize="36sp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="25dp"
            android:paddingTop="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:id="@+id/btnSearch"
            android:layout_gravity="center_horizontal" />

    </RadioGroup>

</RelativeLayout>
