<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fguide2.pdv69.fguide2.SelectionActivity"
    android:background="#fffffded">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffde">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/txtName"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AreaDap"
            android:id="@+id/txtArea"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="25dp"
            android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selJol"
            android:id="@+id/btnJol"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:onClick="selJol"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="35dp"
            android:visibility="invisible" />

    </LinearLayout>
</RelativeLayout>
